# solarpath-firmware

./: CMakeLists.txt  README.md  build.sh
STM32CubeIDE/: .cproject  .mxproject  .project  STM32WLE5CCUX_FLASH.ld  solar_path.ioc
STM32CubeIDE/Core/Inc/: main.h  solarpath.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h  stm32wlxx_nucleo_conf.h  sys_app.h  utilities_def.h
STM32CubeIDE/Core/Src/: main.c  solarpath.cpp  stm32_lpm_if.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c  sys_app.c  syscalls.c  sysmem.c  timer_if.c
STM32CubeIDE/LoRaWAN/App/: app_lorawan.c  lora_app.c  lora_app.h  lora_info.c  se-identity.h
